# projects-FractureSim

./: Body.cpp  Body.cu  Body.h  CMakeLists.txt  CUDA.h  ColorRamp.h  CoordSystemNode.cpp  CoordSystemNode.h  CrackStrategy.h  CrackStrategyOne.cpp  CrackStrategyOne.h  CudaMath.cu  CudaMath.h  CudaMem.cpp  CudaMem.cu  CudaMem.h  DisplacementModifier.cpp  DisplacementModifier.h  FEM_kernels.cu  FixedModifier.cpp  FixedModifier.h  ForceModifier.cpp  ForceModifier.h  FractureSim.dist  GridNode.cpp  GridNode.h  HelperFunctions.h  ISolidLoader.h  ImageD.cu  ImageD.h  KeyHandler.h  MaterialProperties.h  MaterialPropertiesFactory.cpp  MaterialPropertiesFactory.h  Modifier.cpp  Modifier.h  MovableCollisionModifier.cpp  MovableCollisionModifier.h  MshObjLoader.cpp  MshObjLoader.h  (+41 more)
conf/cmake/cuda/: CudaDependency.cmake  FindCuda.cmake  parse_cubin.cmake
report/: Makefile  acknowledgement.tex  appendix_hookes_law.tex  appendix_openengine.tex  appendix_surface_model.tex  appendix_test_data.tex  appendix_test_machines.tex  applying_finite_element_method.tex  conclusion.tex  config.sty  equilibrium_framework.tex  finite_element_method.tex  future_work.tex  helper_tools.tex  introduction.tex  mathematics.tex  parallel_execution.tex  physics.tex  problem_domain.tex  readers_guide.tex  refs.bib  report.tex  results.tex  simulation_model.tex  summary.tex  titlepage.tex
